[package]
name = "tow"
version = "0.0.1"
edition = "2018"
keywords = ["xfce4", "xfwm4", "accessibility", "a11y", "zoom", "ergonomy", "convenience"]
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]

[dependencies]
daemonize = "0.4"
libc = "0.2"
gtypes = "0.2"
clap = "2.33"
rand = "0.7.2"
xcb = "0.8.2"

[dependencies.atspi]
git = "https://github.com/luukvanderduim/atspi"

[dependencies.atspi-sys]
git = "https://github.com/luukvanderduim/atspi-sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
package = "gobject-sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
package = "glib"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
package = "glib-sys"

