[package]
name = "tow"
version = "0.0.2"
edition = "2018"
keywords = ["xfwm4", "accessibility", "a11y", "zoom", "ergonomy", "convenience"]
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.4"
crossbeam-utils = "0.7.2"
daemonize = "0.4.1"
libc = "0.2.67"
log = "0.4.8"
rand = "0.7.3"
simple_logger = "1.6.0"
notify-rust = "3.6.3"

[dependencies.xcb]
git = "https://github.com/rtbo/rust-xcb"
features = ["thread"]
package = "xcb"

[dependencies.atspi]
git = "https://github.com/luukvanderduim/atspi"
# path = "../gtk-rs/sys/atspi"
package = "atspi"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
package = "gobject-sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
package = "glib"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
package = "glib-sys"
